2003-12-08  Nathanael Nerode  <neroden@gcc.gnu.org>

	* doc/install.texi: Revert change of Dec 7; gcc is still a 2.13
	directory.

2003-12-08  Alexandre Oliva  <aoliva@redhat.com>

	* config/frv/frv.md (subdi2): Merge with _internal insn_and_split,
	by using match_scratch.
	(negdi2): New.

2003-12-08  Jason Merrill <jason@redhat.com>
	    Daniel Berlin  <dberlin@dberlin.org>

	PR debug/11114
	Support namespaces in DWARF 2 output.
	* dwarf2out.c (gen_namespace_die): New function.
	(force_namespace_die, setup_namespace_context): New fns.
	(declare_in_namespace): New fn.
	(gen_decl_die): Call declare_in_namespace.  Handle namespaces.
	(dwarf2out_decl): Handle namespaces.
	(scope_die_for): Pass through a namespace scope.
	(class_scope_p): Rename to class_or_namespace_scope_p.
	(gen_subprogram_die, gen_variable_die): Adjust.
	(gen_struct_or_union_die): Always emit a declaration
	if context_die is a namespace.

2003-12-08  Jan Hubicka  <jh@suse.cz>

	* unwind-pe.h (read_uleb128): Fix handling of large values
	(read_sleb128): Fix handling of large values

2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/10060
	* emit-rtl.c (copy_rtx_if_shared): Split out into ...
	(copy_rtx_if_shared_1): here and optimize the last one
	in the sequence into tail-recursion.
	(reset_used_flags): Optimize the last one
	in the sequence into tail-recursion.

2003-12-08  Richard Earnshaw  <rearnsha@arm.com>

	* arm.md: New split to transform ((X << y) - 1) into ~(~(X-1) << y)
	for constant X.

2003-12-08  Richard Sandiford  <rsandifo@redhat.com>

	* calls.c (expand_call): Don't try using tail or recursive calls
	after the function body has been expanded.

2003-12-08  Jan Hubicka  <jh@suse.cz>

	* i386.md (cmpstr expander): Obey TARGET_INLINE_ALL_STRINGOPS

2003-12-08  Arnaud Charlet  <charlet@act-europe.fr>

	PR ada/13324, PR ada/12614
        * doc/install.texi: Update requirements for building Ada.

2003-12-07  David Edelsohn  <edelsohn@gnu.org>